<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/pager">

        <com.skyfishjy.library.RippleBackground
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/content"
            app:rb_color="@color/dark_green"
            app:rb_radius="32dp"
            app:rb_rippleAmount="5"
            app:rb_duration="3000"
            app:rb_type="fillRipple"
            app:rb_scale="4"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


        </com.skyfishjy.library.RippleBackground>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/rlRond"
            android:background="@drawable/bg_rond_scannen"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/centerImage"
                android:src="@drawable/icon_card"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/content"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Waterdrinker Cash &amp; Carry"
                android:id="@+id/textView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#e3efba"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:text="Scan uw pasje"
                android:layout_marginTop="10dp" />

            <com.dd.CircularProgressButton
                android:id="@+id/btnProgress"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cpb_textComplete="@string/pasje_ingelogd"
                app:cpb_textError="@string/pasje_fout"
                app:cpb_textIdle="@string/pasje_welkom"
                app:cpb_cornerRadius="48dp"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="51dp" />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>

