<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/green"
        android:id="@+id/header">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/header_image"
            android:scaleType="center"
            android:alpha="0.2"
            android:background="@drawable/hoek_links_rond"
            android:src="@drawable/plant"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/rl2">


                <RelativeLayout
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:id="@+id/rlProductImage"
                    android:layout_alignParentStart="false">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/product_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/plant"
                        app:border_width="5dp"
                        app:border_color="@color/white"
                        android:layout_marginLeft="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="60dp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvProductName"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/rlProductImage"
                    android:layout_marginTop="65dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAvailable"
                    android:layout_below="@+id/tvProductName"
                    android:layout_alignStart="@+id/tvProductName"
                    android:layout_marginTop="5dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_below="@+id/rlProductImage"
                    android:layout_centerHorizontal="true">


                    <com.dd.CircularProgressButton
                        android:id="@+id/btnProgress"
                        android:layout_width="196dp"
                        android:layout_height="50dp"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        app:cpb_textComplete="@string/bestellen_gelukt"
                        app:cpb_textError="@string/bestellen_fout"
                        app:cpb_textIdle="@string/bestellen"
                        app:cpb_cornerRadius="48dp"
                        android:layout_marginRight="20dp"
                        android:layout_below="@+id/rlProductImage"
                        android:layout_toEndOf="@+id/etBuyAmount"
                        android:layout_marginLeft="20dp" />

                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/etBuyAmount"
                        android:layout_marginLeft="20dp"
                        android:textSize="16dp"
                        android:background="@drawable/et_rounded"
                        android:textColor="@color/black"
                        android:layout_below="@+id/rlProductImage"
                        android:layout_alignParentStart="true"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginTop="6dp"
                        android:text="0"
                        android:gravity="center_horizontal" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPrijs"
                    android:layout_below="@+id/tvAvailable"
                    android:layout_alignStart="@+id/tvAvailable"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

    </RelativeLayout>

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/header">

            <FrameLayout
                android:id="@+id/sample_content_fragment"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" />

    </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#fff" >

        <fragment
            android:name="com.example.fabian.matchit.FragmentDrawer"
            android:id="@+id/actionbar2"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/drawer_navigation"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlDrawerShoppingCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#fff" >

        <fragment
            android:name="com.example.fabian.matchit.FragmentDrawerShoppingCart"
            android:id="@+id/frShoppingCart"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/drawer_navigation"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>